tests/programs/errors/enum_duplicate_value.flow
enum Bad {
    A = 1
    B = 1
}

fn main():int {
    return 0
}
